--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,13 +1,12 @@
-{% set name = "resonATe" %}
-{% set version = "0.3.2" %}
+{% set version = "1.0.1" %}
 
 package:
   name: {{ name|lower }}
   version: {{ version }}
 
 source:
-  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
-  sha256: fda0a39c01c2ae989bcf859514826a5d9b1e4bcd793f55dabe13321822a13938
+  url: https://pypi.io/packages/source/r/resonATe/resonATe-{{ version }}.tar.gz
+  sha256: 0c450f912af44212bd1e5bbd107a475399e57f3ed52c93b0f8aedc109e9c49d7
 
 build:
   number: 0
